--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Personal Website",
   "main": "index.js",
   "scripts": {
+    "start": "node app/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/eduhenke/eduardohenke.com/issues"
   },
-  "homepage": "https://github.com/eduhenke/eduardohenke.com#readme"
+  "homepage": "https://github.com/eduhenke/eduardohenke.com#readme",
+  "dependencies": {
+    "express": "^4.16.2",
+    "express-subdomain": "^1.0.5",
+    "request": "^2.83.0"
+  }
 }
