--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.16.2",
     "express-http-proxy": "^1.1.0",
     "express-subdomain": "^1.0.5",
+    "jquery.terminal": "^1.10.1",
     "middleware-flow": "^0.8.0",
     "request": "^2.83.0"
   }
