--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node app/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "shell-watch": "watchify app/shell/terminal.js -o app/shell/bundle.js"
   },
   "repository": {
     "type": "git",
@@ -18,10 +19,13 @@
   },
   "homepage": "https://github.com/eduhenke/eduardohenke.com#readme",
   "dependencies": {
+    "angular": "^1.6.7",
     "express": "^4.16.2",
     "express-http-proxy": "^1.1.0",
     "express-subdomain": "^1.0.5",
+    "jquery": "^3.2.1",
     "jquery.terminal": "^1.10.1",
+    "lodash": "^4.17.4",
     "middleware-flow": "^0.8.0",
     "request": "^2.83.0"
   }
