--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://eduhenke.github.io/eduardohenke.com/"
+baseurl = "https://eduardohenke.com/"
 languageCode = "en-us"
 theme = "terminal"
 paginate = 5
